// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declare-ticket-rule-general-form Renders \`declare-ticket-rule-general-form\` with empty form 1`] = `
<div
  class="layout gap-2 column"
>
  <div
    class="layout gap-3"
  >
    <div
      class="flex xs8"
    >
      <c-name-field-stub
        autofocus=""
        required=""
        value=""
      />
    </div>
    <div
      class="flex xs4"
    >
      <c-name-field-stub
        label="System name"
        name="system_name"
        value=""
      />
    </div>
  </div>
  <c-enabled-field-stub
    label="Emit trigger"
    name="emit_trigger"
  />
  <declare-ticket-rule-webhooks-field-stub
    name="webhooks"
    templatevars="[object Object]"
    webhooks=""
  />
</div>
`;

exports[`declare-ticket-rule-general-form Renders \`declare-ticket-rule-general-form\` with filled form 1`] = `
<div
  class="layout gap-2 column"
>
  <div
    class="layout gap-3"
  >
    <div
      class="flex xs8"
    >
      <c-name-field-stub
        autofocus=""
        required=""
        value="name"
      />
    </div>
    <div
      class="flex xs4"
    >
      <c-name-field-stub
        label="System name"
        name="system_name"
        value="system-name"
      />
    </div>
  </div>
  <c-enabled-field-stub
    label="Emit trigger"
    name="emit_trigger"
  />
  <declare-ticket-rule-webhooks-field-stub
    name="webhooks"
    templatevars="[object Object]"
    webhooks="[object Object]"
  />
</div>
`;
